# A1_Mediator_standalone

./: .gitignore  README.md  es_policy_example_not_supported.json  ratecontrol_policy_example.json  simplified-es_policy_example.json  ts_policy_example.json
A1_Mediator/: requirements.txt
A1_Mediator/app/: main.py
A1_Mediator/c_app/: main.cpp
A1_Mediator/policies/: 10000.json
flexric-a1-xapp-A1_integration_RIC_TaaP/: README.md
flexric-a1-xapp-A1_integration_RIC_TaaP/ci-scripts/: Jenkinsfile
flexric-a1-xapp-A1_integration_RIC_TaaP/docker/: Dockerfile.flexric.rhel  Dockerfile.flexric.rocky  Dockerfile.flexric.ubuntu
flexric-a1-xapp-A1_integration_RIC_TaaP/examples/xApp/c/: CMakeLists.txt
flexric-a1-xapp-A1_integration_RIC_TaaP/examples/xApp/c/kpm_rc/: CMakeLists.txt
flexric-a1-xapp-A1_integration_RIC_TaaP/examples/xApp/c/kpm_rc_A1/: CMakeLists.txt  policy_api.c  policy_api.h  xapp_kpm_rc.c
flexric-a1-xapp-A1_integration_RIC_TaaP/examples/xApp/c/kpm_rc_A1/A1_Mediator/: README.md
flexric-a1-xapp-A1_integration_RIC_TaaP/examples/xApp/c/kpm_rc_A1/A1_Mediator/app/: main.py
flexric-a1-xapp-A1_integration_RIC_TaaP/examples/xApp/c/kpm_rc_A1/A1_Mediator/app/api/: api.py
flexric-a1-xapp-A1_integration_RIC_TaaP/examples/xApp/c/kpm_rc_A1/A1_Mediator/c_app/: CMakeLists.txt
flexric-a1-xapp-A1_integration_RIC_TaaP/examples/xApp/c/kpm_rc_A1/A1_Mediator/policies/: 20008.json
flexric-a1-xapp-A1_integration_RIC_TaaP/src/ric/: endpoint_ric.c
